--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BTL_Nhom4">
         <activity
-            android:name=".MainActivity"
-            android:exported="true" >
+            android:name=".Calendar"
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".WorkspaceActivityAdmin"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+
         </activity>
         <activity
             android:name=".login"
@@ -31,7 +42,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreen"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
+
 </manifest>
