--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,28 +15,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BTL_Nhom4">
-
+        <activity
+            android:name=".StatisticByDay"
+            android:exported="false" />
         <activity
             android:name=".ResignationLetterActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".Calendar"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".WorkspaceActivityAdmin"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".login"
             android:exported="false" />
@@ -45,11 +44,10 @@
             android:exported="false" />
         <activity
             android:name=".AddEmployees"
-            android:exported="false">           
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".SplashScreen"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
