--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,12 +26,8 @@
             android:exported="false"></activity>
         <activity
             android:name=".WorkspaceActivityAdmin"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
@@ -41,12 +37,20 @@
             android:exported="false" />
         <activity
             android:name=".register"
-            android:exported="false" />
+            android:exported="false" >
+
+        </activity>
         <activity
             android:name=".AddEmployees"
             android:exported="false"></activity>
         <activity
             android:name=".SplashScreen"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
