--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,10 +31,15 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false">
+
+
+        </activity>
         <activity
             android:name=".login"
-            android:exported="false" />
+            android:exported="false" >
+
+        </activity>
         <activity
             android:name=".register"
             android:exported="false" >
@@ -51,6 +56,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
+        </activity>
+        <activity android:name=".Create_workspace" android:exported="false">
+
         </activity>
     </application>
 </manifest>
