--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,38 +16,35 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BTL_Nhom4">
         <activity
+            android:name=".EmployeeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NotificationActivity"
+            android:exported="false" />
+        <activity
             android:name=".StatisticByDay"
             android:exported="false" />
         <activity
             android:name=".ResignationLetterActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".Calendar"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".WorkspaceActivityAdmin"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".login"
-            android:exported="false" >
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".register"
-            android:exported="false" >
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".AddEmployees"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".SplashScreen"
             android:exported="true">
@@ -56,11 +53,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
-        <activity android:name=".Create_workspace" android:exported="false">
-
-        </activity>
+        <activity
+            android:name=".Create_workspace"
+            android:exported="false" />
     </application>
+
 </manifest>
