commit for update and merge main branch

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BTL_Nhom4">
         <activity
+            android:name=".SummaryForAdmin"
+            android:exported="false" />
+        <activity
             android:name=".SummaryEmployeeActivity"
             android:exported="false" />
         <activity
